# patterns

./: .gitignore  LICENSE  Makefile  README.md  check_if_transliterated_length_is_same.py  count_and_check_unicode.py  count_unique_unicode.py  evaluate_data_mix.py  experiments  frqwl2wls.py  generate_joint_patterns.py  hyph.py  make-full-pattern.sh  optimize_params.py  parse_ground_truth.py  requirements.txt  shell.nix  swap_cols_csv.py  todo  transform-hyphens.py  transform-hyphens1.py  validate.py  wiki2frqwl.py  wlh2ipawlh.py  worklog
analysis/: analyser.html  plot_optimizer_behavior.py
groundtruth/: cs-ujc.wlh  pl-wiktionary.wlh  sh-wiktionary.wlh  uk-full-wiktionary.wlh  uk-wiktionary.wlh
parameters/: csskhyphen.par  german8levels-orig.par  haralambous-default.par  ipa-sojka-correctoptimized.par  ipa-sojka-sizeoptimized.par  ipa-verybig.par  ipa-verysmall.par
translatefiles/: pl  uk
wlh2ipawlh/: Cargo.toml
wlh2ipawlh/src/: ipawlh2wlh.rs  lib.rs  main.rs  poc.rs  transform.rs  transform_hyphens.py  transform_hyphens.rs  utils.rs  wlh2ipawlh.rs
