[package]
name = "transform_hyphens"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wlh2ipawlh"
path = "src/wlh2ipawlh.rs"

[[bin]]
name = "ipawlh2wlh"
path = "src/ipawlh2wlh.rs"

[dependencies]
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10"
triple_accel = "*"
translit = "0.5"
phf = { version = "0.11", features = ["macros"] }
dashmap = "6.0.1"
